fix(toolbar): make darker for better text contrast (#2667)
* fix(toolbar): make darker for better text contrast

* squash: borrow some atlaskit colors

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -62,6 +62,23 @@
 .localuser {
     color: #087dba;
 }
+.use-new-toolbox {
+    .chatmessage {
+        color: white;
+    }
+
+    .localuser {
+        color: #4C9AFF;
+    }
+
+    .remoteuser {
+        color: #B8C7E0;
+    }
+
+    #usermsg {
+        color: white;
+    }
+}
 
 .errorMessage {
     color: red;
